--- a/ios/GoBarber.xcodeproj/xcshareddata/xcschemes/GoBarber.xcscheme
+++ b/ios/GoBarber.xcodeproj/xcshareddata/xcschemes/GoBarber.xcscheme
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-               BuildableName = "reactnativetemplate-tvOS.app"
-               BlueprintName = "reactnativetemplate-tvOS"
-               ReferencedContainer = "container:reactnativetemplate.xcodeproj">
+               BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+               BuildableName = "GoBarber.app"
+               BlueprintName = "GoBarber"
+               ReferencedContainer = "container:GoBarber.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -32,10 +32,10 @@
             skipped = "NO">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "2D02E48F1E0B4A5D006451C7"
-               BuildableName = "reactnativetemplate-tvOSTests.xctest"
-               BlueprintName = "reactnativetemplate-tvOSTests"
-               ReferencedContainer = "container:reactnativetemplate.xcodeproj">
+               BlueprintIdentifier = "00E356ED1AD99517003FC87E"
+               BuildableName = "GoBarberTests.xctest"
+               BlueprintName = "GoBarberTests"
+               ReferencedContainer = "container:GoBarber.xcodeproj">
             </BuildableReference>
          </TestableReference>
       </Testables>
@@ -54,10 +54,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "reactnativetemplate-tvOS.app"
-            BlueprintName = "reactnativetemplate-tvOS"
-            ReferencedContainer = "container:reactnativetemplate.xcodeproj">
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "GoBarber.app"
+            BlueprintName = "GoBarber"
+            ReferencedContainer = "container:GoBarber.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </LaunchAction>
@@ -71,10 +71,10 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "2D02E47A1E0B4A5D006451C7"
-            BuildableName = "reactnativetemplate-tvOS.app"
-            BlueprintName = "reactnativetemplate-tvOS"
-            ReferencedContainer = "container:reactnativetemplate.xcodeproj">
+            BlueprintIdentifier = "13B07F861A680F5B00A75B9A"
+            BuildableName = "GoBarber.app"
+            BlueprintName = "GoBarber"
+            ReferencedContainer = "container:GoBarber.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
    </ProfileAction>
