Appointment created page. Adjustments after problem running IOS simulator.

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,7 +7,7 @@ target 'GoBarber' do
 
   config = use_native_modules!
 
-  use_react_native!(:path => config["reactNativePath"])
+  use_react_native!(path: config['reactNativePath'])
 
   target 'GoBarberTests' do
     inherit! :complete
