--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/runtime": "^7.8.4",
     "@react-native-community/eslint-config": "^1.1.0",
     "@testing-library/jest-native": "^3.4.3",
+    "@testing-library/react-hooks": "^3.4.2",
     "@types/jest": "^25.2.3",
     "@types/react-native": "^0.63.2",
     "@types/react-native-vector-icons": "^6.4.5",
@@ -44,6 +45,7 @@
     "@types/yup": "^0.29.6",
     "@typescript-eslint/eslint-plugin": "^4.0.1",
     "@typescript-eslint/parser": "^2.27.0",
+    "axios-mock-adapter": "^1.19.0",
     "babel-jest": "^25.1.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "^18.2.0",
@@ -63,7 +65,9 @@
   },
   "jest": {
     "preset": "react-native",
-    "setupFilesAfterEnv": ["@testing-library/jest-native/extend-expect"],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-native/extend-expect"
+    ],
     "setupFiles": [
       "./src/setupTests.ts",
       "./node_modules/react-native-gesture-handler/jestSetup.js"
