--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "eslint-plugin-react": "^7.20.0",
     "eslint-plugin-react-hooks": "^4",
     "jest": "^25.1.0",
+    "jest-styled-components": "^7.0.3",
     "metro-react-native-babel-preset": "^0.59.0",
     "prettier": "^2.1.1",
     "react-native-testing-library": "^6.0.0",
